--- a/index.html
+++ b/index.html
@@ -20,127 +20,43 @@
     background: var(--bg);
     color: var(--text);
     display: flex;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  /* Sidebar containing idols and categories */
+  #sidebar {
+    display: flex;
+    background: #111;
+    border-right: 1px solid #333;
+    height: 100%;
+  }
+
+  #idolButtons, #categoryPanel {
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    padding: 20px;
-    box-sizing: border-box;
-  }
-
-  h1 {
-    font-size: 28px;
-    font-weight: 700;
-    text-align: center;
-    margin-bottom: 20px;
-    background: linear-gradient(90deg, var(--accent), #b57aff);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    letter-spacing: 1px;
-  }
-
-  .search-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-    margin-bottom: 20px;
-    width: 340px;
-    max-width: 95vw;
-  }
-
-  #searchInput {
-    flex: 1;
-    padding: 10px 14px;
-    border-radius: 8px;
-    border: 1px solid #333;
-    background: var(--card);
-    color: var(--text);
-    font-size: 14px;
-    outline: none;
-  }
-
-  #searchInput:focus { border-color: var(--accent); }
-
-  #searchBtn {
-    background: var(--card);
-    border: 1px solid #333;
-    color: var(--text);
-    padding: 10px 14px;
-    border-radius: 8px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    font-size: 14px;
-  }
-
-  #searchBtn:hover {
-    background: #272727;
-    border-color: var(--accent);
-    color: var(--accent-hover);
-  }
-
-  #suggestions {
-    position: absolute;
-    top: 44px;
-    left: 0;
-    right: 0;
-    background: #1a1a1a;
-    border: 1px solid #333;
-    border-radius: 8px;
-    max-height: 180px;
+    gap: 6px;
+    padding: 10px;
     overflow-y: auto;
-    z-index: 10;
+    max-height: 100%;
   }
 
-  .suggestion {
-    padding: 8px 12px;
-    cursor: pointer;
+  #idolButtons {
+    width: 200px;
+    border-right: 1px solid #333;
   }
 
-  .suggestion:hover {
-    background: #272727;
-    color: var(--accent);
+  #categoryPanel {
+    width: 200px;
   }
 
-  .no-result {
-    padding: 8px 12px;
-    color: var(--muted);
-  }
-
-  .controls {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-
-  .btn, .toggle {
-    background: var(--card);
-    border: 1px solid #333;
-    color: var(--text);
-    padding: 10px 14px;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 14px;
-    transition: all 0.2s ease;
-  }
-
-  .btn:hover, .toggle:hover {
-    background: #272727;
-    border-color: var(--accent);
-    color: var(--accent-hover);
-  }
-
-  /* 🧭 Catalog grid */
+  /* Catalog panel */
   #catalogPanel {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
     gap: 12px;
-    width: 100%;
-    max-width: 1280px;
     padding: 10px;
-    margin-top: 10px;
+    flex: 1;
     overflow-y: auto;
   }
 
@@ -158,40 +74,8 @@
     border-color: var(--accent);
   }
 
-  /* 🌸 Idol buttons */
-  #idolButtons {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    overflow: hidden;
-    background: #111;
-    border-right: none;
-    transition: width 0.3s ease;
-    padding: 0;
-    box-sizing: border-box;
-    z-index: 999;
-    display: flex;
-    flex-direction: column;
-    gap: 6px;
-    visibility: hidden;
-    pointer-events: none;
-  }
-
-  #idolButtons::-webkit-scrollbar { display: none; }
-  #idolButtons { -ms-overflow-style: none; scrollbar-width: none; }
-
-  #idolButtons.open {
-    width: 200px;
-    padding: 10px;
-    border-right: 1px solid #333;
-    overflow-y: auto;
-    visibility: visible;
-    pointer-events: auto;
-  }
-
-  .idol-btn {
+  /* Buttons */
+  .idol-btn, .category-btn {
     background: var(--card);
     border: 1px solid #333;
     color: var(--text);
@@ -203,43 +87,19 @@
     text-align: left;
   }
 
-  .idol-btn:hover {
+  .idol-btn:hover, .category-btn:hover {
     background: #272727;
     border-color: var(--accent);
     color: var(--accent-hover);
   }
 
-  .idol-btn.active {
+  .idol-btn.active, .category-btn.active {
     background: #272727;
     border-color: var(--accent);
     color: var(--accent);
   }
 
-  .category-btn {
-    background: var(--card);
-    border: 1px solid #333;
-    color: var(--text);
-    padding: 8px 10px;
-    border-radius: 8px;
-    font-size: 13px;
-    cursor: pointer;
-    transition: all 0.2s ease;
-    text-align: left;
-  }
-
-  .category-btn:hover {
-    background: #272727;
-    border-color: var(--accent);
-    color: var(--accent-hover);
-  }
-
-  .category-btn.active {
-    background: #272727;
-    border-color: var(--accent);
-    color: var(--accent);
-  }
-
-  /* 🖤 Overlay like Idol-Shuffler */
+  /* Overlay */
   #overlay {
     position: fixed;
     top: 0;
@@ -259,24 +119,66 @@
     border-radius: 12px;
     object-fit: contain;
   }
+
+  /* Search bar at top of sidebar */
+  #searchContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    padding: 10px;
+  }
+
+  #searchInput {
+    padding: 8px;
+    border-radius: 6px;
+    border: 1px solid #333;
+    background: var(--card);
+    color: var(--text);
+    font-size: 14px;
+  }
+
+  #searchBtn {
+    padding: 6px;
+    border-radius: 6px;
+    border: 1px solid #333;
+    background: var(--card);
+    color: var(--text);
+    cursor: pointer;
+  }
+
+  #suggestions {
+    background: #1a1a1a;
+    border: 1px solid #333;
+    border-radius: 6px;
+    max-height: 180px;
+    overflow-y: auto;
+  }
+
+  .suggestion, .no-result {
+    padding: 6px 10px;
+  }
+
+  .suggestion:hover {
+    background: #272727;
+    color: var(--accent);
+  }
+
 </style>
 </head>
 <body>
-<h1>💖 K-pop Idol Gallery</h1>
 
-<div class="search-container">
-  <input id="searchInput" placeholder="Search folder..." />
-  <button id="searchBtn">🔍 Search</button>
-  <div id="suggestions" hidden></div>
+<div id="sidebar">
+  <div id="idolButtonsWrapper">
+    <div id="searchContainer">
+      <input id="searchInput" placeholder="Search folder..." />
+      <button id="searchBtn">🔍 Search</button>
+      <div id="suggestions" hidden></div>
+    </div>
+    <div id="idolButtons"></div>
+  </div>
+  <div id="categoryPanel"></div>
 </div>
 
-<div class="controls">
-  <div class="toggle" id="catalogToggle"><span id="catalogLabel">Catalog</span></div>
-  <div class="toggle" id="categoryToggle"><span id="categoryLabel">Categories</span></div>
-</div>
-
-<div id="idolButtons"></div>
-<div id="categoryPanel"></div>
 <div id="catalogPanel"></div>
 
 <!-- Overlay -->
@@ -296,10 +198,8 @@ const searchInput = document.getElementById("searchInput");
 const searchBtn = document.getElementById("searchBtn");
 const suggestionsEl = document.getElementById("suggestions");
 const catalogPanel = document.getElementById("catalogPanel");
-const catalogToggle = document.getElementById("catalogToggle");
 const idolButtonsEl = document.getElementById("idolButtons");
 const categoryPanel = document.getElementById("categoryPanel");
-const categoryToggle = document.getElementById("categoryToggle");
 const overlay = document.getElementById("overlay");
 
 function parseCatalogText(text) {
@@ -354,7 +254,6 @@ function selectFolder(folder) {
   if (!filteredCatalog.length) filteredCatalog = catalog.filter(it => it.folder.toLowerCase().includes(match));
   suggestionsEl.hidden = true;
   searchInput.value = folder;
-
   applyFilters();
   renderCatalogThumbnails();
 }
@@ -381,7 +280,6 @@ function renderCatalogThumbnails() {
   });
 }
 
-/* 🎬 Overlay logic from Idol-Shuffler */
 let overlayVisible = false;
 function toggleOverlay(url) {
   if (overlayVisible) {
@@ -472,11 +370,8 @@ function toggleCategoryFilter(cat, btn) {
   applyFilters();
 }
 
-/* Event listeners */
 searchBtn.addEventListener("click", () => handleSearch(searchInput.value));
 searchInput.addEventListener("input", () => handleSearch(searchInput.value));
-catalogToggle.addEventListener("click", () => { idolButtonsEl.classList.toggle("open"); });
-categoryToggle.addEventListener("click", () => { categoryPanel.classList.toggle("open"); });
 
 document.addEventListener("click", (e) => {
   if (!suggestionsEl.contains(e.target) && e.target !== searchInput) {
@@ -484,7 +379,6 @@ document.addEventListener("click", (e) => {
   }
 });
 
-/* Load catalog */
 async function loadCatalog() {
   const [res1, res2] = await Promise.all([fetch(MEDIA_URL), fetch(MEDIA_URL_02)]);
   const txt1 = await res1.text();
